post new user plus basic auth with no real user
